# ANN_MNIST_NumberGenerator

./: Generate_MinGW_Makefile_GCC.bat  Generate_SublimeText_Project_GNU_GCC.sh  Generate_VisualStudio_Solution_CLANG_LLVM.bat  Generate_VisualStudio_Solution_MSVC.bat  Generate_Xcode.sh  LICENSE.md  README.md  Setup.bat  Setup.sh
Modules/Resources/TrainedModels/: BasicModel
Modules/Source/: CMakeLists.txt
Modules/Source/Basic_MNIST_Test/: CMakeLists.txt
Modules/Source/Basic_MNIST_Test/Source/: Basic_MNIST_Test.cpp
Modules/Source/Basic_MNIST_Train/: CMakeLists.txt
Modules/Source/Basic_MNIST_Train/Source/: Basic_MNIST_Train.cpp  main.cpp
Modules/Source/Simple_MNIST_GAN_Train_Discriminator/: CMakeLists.txt
Modules/Source/Simple_MNIST_GAN_Train_Discriminator/Source/: Simple_MNIST_GAN_Train_Discriminator.cpp
Modules/Source/Simple_MNIST_GAN_Train_Generator/: CMakeLists.txt
Modules/Source/Simple_MNIST_GAN_Train_Generator/Source/: Simple_MNIST_GAN_Train_Generator.cpp
Modules/Tools/: DefaultConfig.cmake
Modules/Tools/Scripts/Linux/: Generate_SublimeText_Project_GNU_GCC.sh
Modules/Tools/Scripts/Mac/: Generate_Xcode.sh
Modules/Tools/Scripts/Windows/: Generate_MinGW_Makefile_GCC.bat  Generate_VisualStudio_Solution_CLANG_LLVM.bat  Generate_VisualStudio_Solution_MSVC.bat
